[package]
name = "dungeon"
version = "0.16.0"
authors = ["Patrick Clément-Bonhomme <patrick.cb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bracket-lib = { version = "~0.8.1" }
bracket-lib = { git = "https://github.com/amethyst/bracket-lib" }
legion = { version = "~0.3.0" }
serde = { version = "~1.0.115" }
ron = { version = "~0.6.1" }

[profile.release]
lto = "thin"
