[package]
name = "dungeon"
version = "0.17.0"
authors = ["Patrick Clément-Bonhomme <patrick.cb@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = { version = "~0.8.1" }
bevy_ecs = { version = "~0.10.0" }
serde = { version = "1" }
ron = { version = "~0.8.0" }

[profile.release]
lto = "thin"
